--- a/index.html
+++ b/index.html
@@ -77,7 +77,81 @@
     </nav>
   </header>
   <main class="lg:container lg:mx-auto">
-
+    <section class="my-24"> 
+        <div class="carousel w-full bg-[#FDF1EE] ">
+            <!-- slider 1 -->
+            <div id="slide1" class="carousel-item relative w-full">
+                <div class="flex md:flex-row flex-col-reverse xl:gap-80 gap:30 md:p-28 p-12">
+                    <div class="space-y-4">
+                        <h2 class="font-bold xl:text-6xl text-3xl">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco <br> 
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+                            <a class="btn bg-bike-primary text-white hover:bg-orange-600 lg:py-2 lg:px-8 py-1 px-5 rounded-md lg:text-2xl text-1xl font-bold">Purchase</a>  
+                    </div>
+                    <div>
+                        <img src="slider/bike1.png" alt="">
+                    </div>
+                </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide4" class="btn btn-circle">❮</a>
+                <a href="#slide2" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <div id="slide2" class="carousel-item relative w-full">
+                <div class="flex md:flex-row flex-col-reverse xl:gap-80 gap:30 md:p-28 p-12">
+                    <div class="space-y-4">
+                        <h2 class="font-bold xl:text-6xl text-3xl">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco <br> 
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+                            <a class="btn bg-bike-primary text-white hover:bg-orange-600 lg:py-2 lg:px-8 py-1 px-5 rounded-md lg:text-2xl text-1xl font-bold">Purchase</a>  
+                    </div>
+                    <div>
+                        <img src="slider/bike2.png" alt="">
+                    </div>
+                </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide1" class="btn btn-circle">❮</a>
+                <a href="#slide3" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <!-- slider 3 -->
+            <div id="slide3" class="carousel-item relative w-full">
+                <div class="flex md:flex-row flex-col-reverse xl:gap-80 gap:30 md:p-28 p-12">
+                    <div class="space-y-4">
+                        <h2 class="font-bold xl:text-6xl text-3xl">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco <br> 
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+                            <a class="btn bg-bike-primary text-white hover:bg-orange-600 lg:py-2 lg:px-8 py-1 px-5 rounded-md lg:text-2xl text-1xl font-bold">Purchase</a>  
+                    </div>
+                    <div>
+                        <img src="slider/bike3.png" alt="">
+                    </div>
+                </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide2" class="btn btn-circle">❮</a>
+                <a href="#slide4" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+            <!-- slider 4 -->
+            <div id="slide4" class="carousel-item relative w-full">
+                <div class="flex md:flex-row flex-col-reverse xl:gap-80 gap:30 md:p-28 p-12">
+                    <div class="space-y-4">
+                        <h2 class="font-bold xl:text-6xl text-3xl">Ride-on R15 V4 <br> with Smile</h2>
+                        <p>Amet minim mollit non deserunt ullamco <br> 
+                            est sit aliqua dolor do amet sint. Velit officia consequat <br> duis enim velit mollit.</p>
+                            <a class="btn bg-bike-primary text-white hover:bg-orange-600 lg:py-2 lg:px-8 py-1 px-5 rounded-md lg:text-2xl text-1xl font-bold">Purchase</a>  
+                    </div>
+                    <div>
+                        <img src="slider/bike4.png" alt="">
+                    </div>
+                </div>
+              <div class="absolute left-5 right-5 top-1/2 flex -translate-y-1/2 transform justify-between">
+                <a href="#slide3" class="btn btn-circle">❮</a>
+                <a href="#slide1" class="btn btn-circle">❯</a>
+              </div>
+            </div>
+          </div>
+    </section>
   </main>
   <footer>
 
