adde feature section

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </script>
 </head>
 <body class="font-poppins">
-  <header class="lg:container lg:mx-auto">
+  <header class="md:container md:mx-auto">
     <nav>
         <div class="navbar bg-base-100">
             <div class="flex-1">
@@ -76,7 +76,7 @@
           </div>
     </nav>
   </header>
-  <main class="lg:container lg:mx-auto">
+  <main class="md:container md:mx-auto">
     <section class="my-24"> 
         <div class="carousel w-full bg-[#FDF1EE] ">
             <!-- slider 1 -->
@@ -152,6 +152,30 @@
             </div>
           </div>
     </section>
+
+    <!-- feature bike start -->
+     <section class="my-24">
+        <div class="text-center mb-5">
+            <h2 class="text-5xl font-semibold">Fetured Bikes In This Year</h2>
+            <p class="font-semibold text-bike-primary">Best bike collection</p>
+
+        </div>
+        <div class="flex justify-center ">
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 lg:gap-36 gap-20">
+                <div>
+                    <img src="others/feature-bike.png" alt="">
+                </div>
+                <div>
+                    <img src="others/feature-bike.png" alt="">
+                </div>
+                <div>
+                    <img src="others/feature-bike.png" alt="">
+                </div>
+            </div>
+        </div>
+ 
+     </section>
+    <!-- feature bike end -->
   </main>
   <footer>
 
